Updated main.css to include class .answer-failed. Also, updated index.html to call HTTPS, once the Back-End is ready we'll have the solution fully hosted in the cloud between GitHub Pages and Amazon.

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           }
 
         function getQuestions(productName){
-          fetch('http://ec2-35-162-13-71.us-west-2.compute.amazonaws.com:8080/products/'+productName)
+          fetch('https://ec2-35-162-13-71.us-west-2.compute.amazonaws.com:8080/products/'+productName)
               .then(function (response) {
               lastProduct = productName;
               return response.json();
